syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.vanga";

import "common.proto";
import "google/protobuf/wrappers.proto";

message RetrieveMemberCountByIslandIdRequest {
    string islandId = 1;
}

message RetrieveMemberCountByMembershipIdRequest {
    string membershipId = 1;
}

message RetrieveMemberCountResponse {
    CommonStatus status = 1;
    int32 memberCount = 2;
}

message RetrieveMembershipIdsRequest {
    string userId = 1;
    google.protobuf.StringValue islandId = 2;
}

message RetrieveMembershipIdsResponse {
    CommonStatus status = 1;
    repeated string membershipIds = 2;
}

message RetrieveSubscribeMembershipRequest {
    string userId = 1;
    string islandId = 2;
}

message RetrieveSubscribeMembershipResponse {
    CommonStatus status = 1;
    repeated SubscribeMembershipMessage message = 2;
}

message SubscribeMembershipMessage {
    string userId = 1;
    string islandId = 2;
    string membershipId = 3;
    uint64 expiredTime = 4;
}

service SubscribeMembershipService{
    rpc RetrieveMemberCountByIslandId (RetrieveMemberCountByIslandIdRequest) returns (RetrieveMemberCountResponse) {};
    rpc RetrieveMemberCountByMembershipId (RetrieveMemberCountByMembershipIdRequest) returns (RetrieveMemberCountResponse) {};
    rpc RetrieveMembershipIdsByUserIdAndIslandId (RetrieveMembershipIdsRequest) returns (RetrieveMembershipIdsResponse) {};
    rpc RetrieveSubscribeMembershipByUserId (RetrieveSubscribeMembershipRequest) returns (RetrieveSubscribeMembershipResponse) {};
}
